# password_manager

./: .env  Cargo.toml  diesel.toml
migrations/: 20250611211733_create_passwords_table.sql  20250613131118_create_users_table.sql  20250614033219_add_user_id_to_passwords.sql
migrations/2025-06-21-162830_create_initial_tables/: down.sql  up.sql
migrations/2025-06-23-104023_add_notes_to_passwords/: down.sql  up.sql
src/: main.rs  schema.rs
