[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] } 
axum = "0.7"                                      
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"    
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] } # Asynchronous SQL database driver
dotenvy = "0.15"   
argon2 = "0.5" # For password hashing
rand_core = { version = "0.6", features = ["std"] } # Dependency for argon2                             