[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] } 
axum = "0.7"                                      
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"    
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] } # Asynchronous SQL database driver
dotenvy = "0.15"   
argon2 = "0.5" # For password hashing
rand_core = { version = "0.6", features = ["std"] } # Dependency for argon2                             
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] } # For handling timestamps in JWT claims

axum-extra = { version = "0.10.1", features = ["typed-header"] } # For TypedHeader extractor
# Make sure uuid has `v4` feature for generation if you use it for user IDs in DB
uuid = { version = "1.17.0", features = ["v4", "serde"] } # Ensure uuid is updated and has "serde" feature for JSON
rand = "0.9.1"
rand_distr = "0.5.1"
diesel = { version = "2.2.10", features = ["postgres", "uuid", "r2d2", "chrono"] } # ORM framework
diesel-async = { version = "0.5.2", features = ["tokio", "r2d2"] }      # Async support for Diesel with Tokio
